Changed License to MIT

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Project Helium is copyrighted by Steven Holms <superlinkx@gmail.com> and is under Apache 2.0 license
+Project Helium is copyrighted by Steven Holms <superlinkx@gmail.com> and is under MIT License
 and the Creative Commons 3.0 content license. Use outside of these licenses is prohibited.
 
 Basic Tree:
